small change to landing.

--- a/src/app/entry/entryLanding/entryLanding.html
+++ b/src/app/entry/entryLanding/entryLanding.html
@@ -10,6 +10,8 @@
                     Please select the resource you want to enter from the list to the left.
                     <br>
                     Please answer <u>every</u> question to the best of your ability.
+                    <br>
+                    All questions are <u>required.</u>
                 </div>
             </div>
         </div>
