--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -186,8 +186,8 @@
                     <div class="form-group">
                         <label for="orgResource">Are any of your resources free?</label>
                             <md-radio-group [(ngModel)]="submission.data.resource_free" name="orgResource" required>
-                                <md-radio-button class="block-input" name="resource" value="yes" required>Yes</md-radio-button>
-                                <md-radio-button class="block-input" name="resource" value="no">No</md-radio-button>
+                                <md-radio-button class="block-input" name="resource" value="Yes" required>Yes</md-radio-button>
+                                <md-radio-button class="block-input" name="resource" value="No">No</md-radio-button>
                                 <md-radio-button class="block-input" name="resource" value="We don't offer resources">We don't offer resources</md-radio-button>
                             </md-radio-group>
                     </div>
@@ -195,8 +195,8 @@
                     <div class="form-group">
                         <label for="orgConference">Are any of your events/conferences free?</label>
                             <md-radio-group [(ngModel)]="submission.data.event_free" name="orgConference" required>
-                                <md-radio-button class="block-input" name="conference" value="yes" required>Yes</md-radio-button>
-                                <md-radio-button class="block-input" name="conference" value="no">No</md-radio-button>
+                                <md-radio-button class="block-input" name="conference" value="Yes" required>Yes</md-radio-button>
+                                <md-radio-button class="block-input" name="conference" value="No">No</md-radio-button>
                                 <md-radio-button class="block-input" name="conference" value="We don't offer events/conferences">We don't offer events/conferences</md-radio-button>
                             </md-radio-group>
                     </div>      
@@ -204,8 +204,8 @@
                     <div class="form-group">
                         <label for="orgMembership">Do you charge for membership?</label>
                             <md-radio-group [(ngModel)]="submission.data.membership_free" name="orgMembership" required>
-                                <md-radio-button class="block-input" name="membership" value="yes" required>Yes</md-radio-button>
-                                <md-radio-button class="block-input" name="membership" value="no">No</md-radio-button>
+                                <md-radio-button class="block-input" name="membership" value="Yes" required>Yes</md-radio-button>
+                                <md-radio-button class="block-input" name="membership" value="No">No</md-radio-button>
                                 <md-radio-button class="block-input" name="membership" value="We don't offer memberships">We don't offer memberships</md-radio-button>
                             </md-radio-group>
                     </div>
