angular changes and testing view change

--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -114,7 +114,7 @@
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
                                 placeholder="Other Country"
-                                [(ngModel)]="submission.data.country"
+                                [(ngModel)]="congCountryOther"
                                 name="otherCountry"/>
                                 </md-input-container>
                             </md-radio-button>
@@ -137,7 +137,7 @@
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
                                 placeholder="Other Denomination/Tradition"
-                                [(ngModel)]="submission.data.denomination"
+                                [(ngModel)]="congDenomOther"
                                 name="otherDenom"/>
                                 </md-input-container>
                             </md-radio-button>
@@ -287,7 +287,7 @@
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
                                 placeholder="Other Shape"
-                                [(ngModel)]="shapeOther"
+                                [(ngModel)]="congShapeOther"
                                 name=shapeOther/>
                                 </md-input-container>
                             </md-radio-button>
