--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -98,7 +98,7 @@
                                     <md-input-container>
                                     <input md-input mdInput type="text" 
                                     placeholder="Other Denomination/Tradition"
-                                    [(ngModel)]="submission.data.denomination"
+                                    [(ngModel)]="orgsDenomOther"
                                     name=orgDenominationOther/>
                                     </md-input-container>
                                 </md-radio-button>
@@ -156,7 +156,7 @@
                                     <md-input-container>
                                     <input md-input mdInput type="text" 
                                     placeholder="Other Country"
-                                    [(ngModel)]="countryOther"
+                                    [(ngModel)]="orgsCountryOther"
                                     name="submission.data.country"/>
                                     </md-input-container>
                                 </md-radio-button>  
@@ -176,7 +176,7 @@
                                     <md-input-container>
                                     <input md-input mdInput type="text" 
                                     placeholder="Other Geographic Area"
-                                    [(ngModel)]="submission.data.geographic_area"
+                                    [(ngModel)]="orgsGeoOther"
                                     name="orgGeogrphicsOther"/>
                                     </md-input-container>
                                 </md-radio-button>       
