changes to event form

--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -38,10 +38,10 @@
                     <div class="form-group">
                         <label for="eventOccurance">Is Your Event...</label>
                             <md-radio-group [(ngModel)]="submission.data.occurance" name="eventOccrance" required>
-                                <md-radio-button class="block-input" name="occurance" value="annual" required>Annual</md-radio-button>
-                                <md-radio-button class="block-input" name="occurance" value="every2yrs">Every-Other-Year (once every 2 years)</md-radio-button>
-                                <md-radio-button class="block-input" name="occurance" value="once">One Time Only</md-radio-button>
-                                <md-radio-button class="block-input" name="occurance" value="other">
+                                <md-radio-button class="block-input" name="occurance" value="Annual" required>Annual</md-radio-button>
+                                <md-radio-button class="block-input" name="occurance" value="Every-Other-Year (once every 2 years)">Every-Other-Year (once every 2 years)</md-radio-button>
+                                <md-radio-button class="block-input" name="occurance" value="One Time Only">One Time Only</md-radio-button>
+                                <md-radio-button class="block-input" name="occurance">
                                     <md-input-container class="full-width">
                                         <input md-input mdInput type="text"
                                         placeholder="Other occurance"
@@ -149,7 +149,7 @@
                             placeholder="Event Date"
                             id="eventDate" 
                             class="form-control" 
-                            [(ngModel)]="submission.data.eventDate"
+                            [(ngModel)]="submission.data.event_date"
                             name="eventDate"
                             #eventDate="ngModel"
                             rerquired/>
@@ -166,11 +166,11 @@
                     <div class="form-group">
                         <label for="eventCost">Registration Cost</label>
                             <md-radio-group [(ngModel)]="submission.data.cost" name="eventCost" required>
-                                <md-radio-button class="block-input" name="cost" value="free" required>Free</md-radio-button>
-                                <md-radio-button class="block-input" name="cost" value="under100">Under $100</md-radio-button>
-                                <md-radio-button class="block-input" name="cost" value="100to200">Between $100 and $250</md-radio-button>
-                                <md-radio-button class="block-input" name="cost" value="250to500">Between $250 and $500</md-radio-button>
-                                <md-radio-button class="block-input" name="cost" value="over1000">Over $1000</md-radio-button>
+                                <md-radio-button class="block-input" name="cost" value="Free" required>Free</md-radio-button>
+                                <md-radio-button class="block-input" name="cost" value="Under $100">Under $100</md-radio-button>
+                                <md-radio-button class="block-input" name="cost" value="Between $100 and $250">Between $100 and $250</md-radio-button>
+                                <md-radio-button class="block-input" name="cost" value="Between $250 and $500">Between $250 and $500</md-radio-button>
+                                <md-radio-button class="block-input" name="cost" value="Over $1000">Over $1000</md-radio-button>
                             </md-radio-group>
                     </div> 
 
@@ -240,8 +240,8 @@
                     <div class="form-group">
                         <label for="eventMember">Is a Hymn Society member involved?</label>
                             <md-radio-group [(ngModel)]="submission.data.hymn_soc_member" name="isMember" required>
-                                <md-radio-button class="block-input" name="hymn_soc_member" value="yes" required>Yes</md-radio-button>
-                                <md-radio-button class="block-input" name="hymn_soc_member" value="no">No</md-radio-button>
+                                <md-radio-button class="block-input" name="hymn_soc_member" value="Yes" required>Yes</md-radio-button>
+                                <md-radio-button class="block-input" name="hymn_soc_member" value="No">No</md-radio-button>
                             </md-radio-group>
                     </div>   
 
