--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -41,7 +41,7 @@
                                 <md-radio-button class="block-input" name="occurance" value="Annual" required>Annual</md-radio-button>
                                 <md-radio-button class="block-input" name="occurance" value="Every-Other-Year (once every 2 years)">Every-Other-Year (once every 2 years)</md-radio-button>
                                 <md-radio-button class="block-input" name="occurance" value="One Time Only">One Time Only</md-radio-button>
-                                <md-radio-button class="block-input" name="occurance">
+                                <md-radio-button class="block-input" name="occurance" value="other">
                                     <md-input-container class="full-width">
                                         <input md-input mdInput type="text"
                                         placeholder="Other occurance"
