--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -458,7 +458,7 @@
 
             <div class="form-group">
                 <label for="resourceIsInvolved">Is a Hymn Society member involved?</label>
-                <md-radio-group name="resourceIsInvolved" [(ngModel)]="submission.data.hymn_soc_member" >
+                <md-radio-group name="resourceIsInvolved" [(ngModel)]="submission.data.hymn_soc_member" required>
                     <md-radio-button class="block-input" value="Yes" required> Yes</md-radio-button>
                     <md-radio-button class="block-input" value="Yo"> No</md-radio-button>
                     <md-radio-button class="block-input" value="Unknown"> Unknown</md-radio-button>
@@ -467,7 +467,7 @@
 
             <div class="form-group">
                 <label for="resourceFree">Is this resource free?</label>
-                <md-radio-group name="resourceFree" [(ngModel)]="submission.data.is_free" aria-required="">
+                <md-radio-group name="resourceFree" [(ngModel)]="submission.data.is_free" required>
                     <md-radio-button class="block-input" value="Yes" required> Yes</md-radio-button>
                     <md-radio-button class="block-input" value="Partially with paywall"> Partially with paywall</md-radio-button>
                     <md-radio-button class="block-input" value="No"> No</md-radio-button>
