--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -203,6 +203,20 @@
                                 ng-false-value="false"
                                 name="congregationTypeEight"
                                 [(ngModel)]="submission.data.categories.Secular_Song">Secular Song</md-checkbox>
+
+                            <md-checkbox class="block-input">                        
+                                <md-input-container class="full-width">
+                                <input md-input mdInput type="text"
+                                id="congregationCategoryOther" 
+                                class="form-control" 
+                                [(ngModel)]="submission.data.categories.Other"
+                                name="congregationCategoryOther"
+                                placeholder="Other Type"
+                                name="congregationCategoryOther"/>
+                                </md-input-container>
+                            </md-checkbox>
+
+                            
                     </div>
 
                     <div class="form-group" >
@@ -280,9 +294,12 @@
                     <div class="form-group">
                         <label for="congregationShape">Which best describes the shape of your worship?</label>
                         <md-radio-group [(ngModel)]="submission.data.shape" name="congregationShape" required>
-                            <md-radio-button class="block-input" value="5-Fold Pattern (Gathering, Word, Response, Table, Sending)" required> 5-Fold Pattern (Gathering, Word, Response, Table, Sending)</md-radio-button>
-                            <md-radio-button class="block-input" value="4-Fold Pattern (Gathering, Word, Response, Sending) - Communion monthly or quarterly"> 4-Fold Pattern (Gathering, Word, Response, Sending) - Communion monthly or quarterly</md-radio-button>
-                            <md-radio-button class="block-input" value="2-Fold Pattern (Praise & Teaching)"> 2-Fold Pattern (Praise & Teaching)</md-radio-button>
+                            <md-radio-button class="block-input" value="5-Fold Pattern (5-Fold Pattern (Gathering, Word, Response, Table, Sending) - Roman Catholic Mass and similar structures" required> 
+                                5-Fold Pattern (5-Fold Pattern (Gathering, Word, Response, Table, Sending) - Roman Catholic Mass and similar structures</md-radio-button>
+                            <md-radio-button class="block-input" value="4-Fold Pattern (Gathering, Word, Response, Sending) - Communion monthly or quarterly"> 
+                                4-Fold Pattern (Gathering, Word, Response, Sending) - Communion monthly or quarterly</md-radio-button>
+                            <md-radio-button class="block-input" value="2-Fold Pattern (Praise & Teaching) - Most Praise and Worship services"> 
+                                2-Fold Pattern (Praise & Teaching) - Most Praise and Worship services</md-radio-button>
                             <md-radio-button class="block-input" value="other"> 
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
@@ -301,6 +318,14 @@
                             <md-radio-button class="block-input" value="Robes, with or without stoles" > Robes, with or without stoles</md-radio-button>
                             <md-radio-button class="block-input" value="Business Attire" > Business Attire</md-radio-button>
                             <md-radio-button class="block-input" value="Casual" > Casual</md-radio-button>
+                            <md-radio-button class="block-input" value="other">   
+                                <md-input-container>
+                                <input md-input mdInput type="text" 
+                                placeholder="Other form of attire"
+                                [(ngModel)]="attireOther"
+                                name="otherAttire"/>
+                                </md-input-container>
+                            </md-radio-button>
                         </md-radio-group>
                     </div>       
                     
