completing brian number 6

--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -86,18 +86,8 @@
                             id="eventParent" 
                             class="form-control" 
                             [(ngModel)]="submission.data.parent"
-                            name="eventParent"
-                            #eventParent="ngModel"
-                            required/>
-                        </md-input-container>
-                        <div class="alert alert-danger" *ngIf="eventParent.errors && eventParent.touched">
-                            <ul>
-                                <li [hidden]="!eventParent.errors.required">
-                                    Parent/Sponsoring rganization is required
-                                </li>
-                            </ul>
-                        </div>
-                        
+                            name="eventParent"/>
+                        </md-input-container>          
                     </div>
 
                     <div class="form-group">
