--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -106,8 +106,7 @@
                     id="resourceParent" 
                     class="form-control" 
                     [(ngModel)]="submission.data.parent"
-                    name="reourceParent"
-                    required/>
+                    name="reourceParent"/>
                 </md-input-container>
             </div>
 
