--- a/src/app/entry/entryLanding/entryLanding.html
+++ b/src/app/entry/entryLanding/entryLanding.html
@@ -9,7 +9,7 @@
                 <div class="card-block">
                     Please select the resource you want to enter from the list to the left.
                     <br>
-                    Please answer every question to the best of your ability. All questions are <u>required.</u>
+                    Please answer <u>every</u> question to the best of your ability.
                 </div>
             </div>
         </div>
